--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -26,6 +26,11 @@
             }
         }
     }
+    .flex-ayuda{
+        h4, .consultas{
+            font-size: large;
+        }
+    }        
     #formulario{
         margin: 0 100px 0 100px;
     }
@@ -72,7 +77,7 @@
     }
     .flex-ayuda{
         text-align: center;
-        h4{
+        h4, .consultas{
             font-size: medium;
             padding-bottom: 10px;
         }
@@ -80,39 +85,43 @@
             padding-bottom: 10px;
         }
     }
-    .text-heladeras, .text-notebooks{
-        h2{
-            font-size: medium;
-        }
-        h3{
-            font-size: medium;
-        }
-        .btn{
-            padding: 3px 6px 3px 6px;
-            font-size: small;
-        }
+    .titulo-heladeras, .titulo-netbooks, .titulo-lavarropas{
+        font-size: xx-large;
     }
     .nosotrosNV{
         margin: 0 50px 0 50px;
     }
 }
 
-@media (max-width: 426px){
+@media (max-width: 573px){
+    .titulo-heladeras, .titulo-netbooks, .titulo-lavarropas{
+        font-size: xx-large;
+    }
     .box-heladeras, .box-netbooks{
-        .texto-productos{
-            font-size: larger;
+        .texto-productos, .precio-productos{
+            font-size: x-large;
         }
         .btn{
-            font-size: small;
+            font-size: medium;
             margin-bottom: 10px;
         }
     }
     .flex-todo{
+        .titulo-productos{
+            font-size: x-large;
+        }
         .grid-listas{
             grid-template-columns: repeat(1,1fr);
             justify-items: center;
             .lista-productos{
                 width: 250px;
+                .texto-productos, .precio-productos{
+                    font-size: x-large;
+                }
+                .btn{
+                    font-size: medium;
+                    margin-bottom: 10px;
+                }
             }
         } 
     }  
@@ -130,6 +139,22 @@
     }
     .flex-ayuda{
         flex-direction: column;
+        h4, .consultas{
+            font-size: large;
+        }
+    }
+    .titulo-pedidos{
+        font-size: x-large;
+    }
+    .flex-pedidos{
+        .bordes-pedidos{
+            .texto-productos{
+                font-size: larger;
+            }
+            h3{
+                font-size: large;
+            }
+        }
     }
     .historia{
         font-size: large;
@@ -138,3 +163,52 @@
         margin: 0 10px 0 10px;
     }
 }
+
+@media (max-width: 375px){
+    .titulo-heladeras, .titulo-netbooks, .titulo-lavarropas{
+        font-size: larger;
+    }
+    .box-heladeras, .box-netbooks{
+        .texto-productos, .precio-productos{
+            font-size: medium;
+        }
+        .btn{
+            font-size: xx-small;
+        }
+    }
+    .flex-ayuda{
+        h4, .consultas{
+            font-size: medium;
+        }
+    }
+    .flex-todo{
+        .grid-listas{
+            .lista-productos{
+                width: 200px;
+                .texto-productos, .precio-productos{
+                    font-size: larger;
+                }
+                .btn{
+                    font-size: small;
+                }
+            }
+        } 
+    }
+    .titulo-pedidos{
+        font-size: larger;
+    }
+    .flex-pedidos{
+        margin: 0 20px 0 20px;
+        .bordes-pedidos{
+            .texto-productos{
+                font-size: large;
+            }
+            h3{
+                font-size: medium;
+            }
+        }
+    }
+    span{
+        font-size: medium;
+    }
+}   
