--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300&family=Titillium+Web:wght@300&family=Varela+Round&display=swap');
+
 @import "estanteria";
+@import "navbar";
 @import "publicidad";
-@import "productos";
 @import "formulario";
 @import "pedidos";
 @import "acercade";
@@ -9,52 +11,30 @@
     $colormain: #134074;
     $colorfooter: #0B2545;
     $colorletras: #EEF4ED;
-    $colornavbar: #0B2545;
+    $fontFooter: 'Varela Round', sans-serif;
     
-
-    .navbar {
-        background-color: $colornavbar;
-        .container{
-            justify-content: space-evenly;
-        }
-        li {
-            padding: 10px;
-            .nav-link {
-                font-size: xx-large;
-                color: $colorletras;
-                text-decoration: underline;
-            }
-        }
-    }
-
-    .carousel{
-        padding: 20px 0 20px 0;
-    }
-    .espacio{
-        border-radius: 4px;
-        background-color: black;
+    *{
+        padding: 0;
+        margin: 0;
     }
 
     main {
         background-color: $colormain;
     }
-
-    h2, h1{
-        text-decoration: underline;
-    }
-
     .flex-ayuda{
         display: flex;
         justify-content: space-evenly;
         background-color: $colornavbar;
         h4{
-            font-size: x-large;
             color: $colorletras;
+            font-family: $fontFooter;
         }
         .redes-catalogo{
             display: inline-block;
         }
         .consultas{
             color: $colorletras;
+            text-decoration: none;
+            font-family: $fontFooter;
         }
     }
